--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.1",
+    "styled-components": "^5.3.11",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
